--- a/index.yaml
+++ b/index.yaml
@@ -1,4 +1,4 @@
-id: github.com/ibm-garage-cloud/terraform-ibm-activity-tracker
+id: github.com/cloud-native-toolkit/terraform-ibm-activity-tracker
 name: ibm-activity-tracker
 type: terraform
 description: Provisions the IBM Cloud hosted Activity Tracker service
@@ -8,6 +8,40 @@ tags:
   - ibm cloud
   - activity tracker
 versions:
+  - platforms: []
+    dependencies: []
+    variables:
+      - name: resource_group_name
+        scope: global
+        type: string
+        description: Resource group where the cluster has been provisioned.
+      - name: resource_location
+        scope: global
+        alias: region
+        type: string
+        description: Geographic location of the resource (e.g. us-south, us-east)
+      - name: name_prefix
+        scope: global
+        type: string
+        description: The prefix name for the service. If not provided it will default to the resource group name
+        default: ""
+        optional: true
+      - name: tags
+        type: list(string)
+        description: Tags that should be applied to the service
+        default: []
+        optional: true
+      - name: plan
+        type: string
+        description: The type of plan the service instance should run under (lite, 7-day, 14-day, or 30-day)
+        default: 7-day
+        optional: true
+      - name: provision
+        type: bool
+        description: Flag indicating that the instance should be provisioned
+        default: false
+        optional: true
+    version: v2.0.0
   - platforms: []
     dependencies: []
     variables:
