Adds rg module dependency
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -8,10 +8,16 @@ tags:
     - activity tracker
 versions:
 - platforms: []
-  dependencies: []
+  dependencies:
+    - id: resource_group
+      refs:
+        - source: github.com/cloud-native-toolkit/terraform-ibm-resource-group
+          version: ">= 2.1.0"
   variables:
     - name: resource_group_name
-      scope: global
+      moduleRef:
+        id: resource_group
+        output: name
     - name: resource_location
       scope: global
       alias: region
