Adds provision to variable metadata
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -23,4 +23,7 @@ versions:
       alias: region
     - name: name_prefix
       scope: global
+    - name: provision
+      scope: module
+      defaultValue: true
 
