Adds provision to variable metadata (#8)
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -24,3 +24,8 @@ versions:
     - name: resource_location
       scope: global
       alias: region
+    - name: name_prefix
+      scope: global
+    - name: provision
+      scope: module
+      defaultValue: true
