changed from terraform resource to script (#22)
* changed from terraform resource to script than can handle existing instances in a region

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* updated test files

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* updated to support output data for existing instance

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* missing files

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* fixed bad dependency

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* updated bad script names

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* fix variables passed into data source so that it doesn't fail if existing AT instance is in a different RG

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* added missing region env var

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

* updated readme

Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .idea/
 *.iml
+
+
+test/stages/.terraform
+test/stages/.terraform.lock.hcl
+test/stages/*.tfstate*
+test/stages/bin2
+test/stages/module
+
+creation-output.json
