fixes module metadata sync
Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -26,6 +26,7 @@ versions:
       alias: region
     - name: name_prefix
       scope: global
-    - name: provision
-      scope: module
-      defaultValue: true
+    - name: sync
+      moduleRef:
+        id: sync
+        output: sync
