added sync module dependnecy
Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -16,6 +16,11 @@ versions:
       refs:
         - source: github.com/cloud-native-toolkit/terraform-ibm-resource-group
           version: ">= 2.1.0"
+    - id: sync
+      refs: []
+      interface: github.com/cloud-native-toolkit/automation-modules#sync
+      manualResolution: true
+      optional: true
   variables:
     - name: resource_group_name
       moduleRef:
