--- a/index.yaml
+++ b/index.yaml
@@ -55,6 +55,71 @@ versions:
         moduleRef:
           id: sync
           output: sync
+    version: v2.4.11
+    outputs:
+      - name: id
+        description: The id of the provisioned instance.
+      - name: guid
+        description: The id of the provisioned instance.
+      - name: name
+        description: The name of the provisioned instance.
+      - name: crn
+        description: The id of the provisioned instance
+      - name: location
+        description: The location of the provisioned instance
+      - name: service
+        description: The service name of the key provisioned for the instance
+      - name: label
+        description: The label for the instance
+      - name: sync
+        description: Value used to order the provisioning of the instance
+  - platforms: []
+    providers:
+      - name: ibm
+        source: ibm-cloud/ibm
+    dependencies:
+      - id: resource_group
+        refs:
+          - source: github.com/cloud-native-toolkit/terraform-ibm-resource-group
+            version: '>= 2.1.0'
+      - id: sync
+        refs: []
+        interface: github.com/cloud-native-toolkit/automation-modules#sync
+        manualResolution: true
+        optional: true
+    variables:
+      - name: ibmcloud_api_key
+        type: string
+        description: The IBM Cloud api key
+        scope: global
+      - name: resource_group_name
+        type: string
+        description: Resource group where the cluster has been provisioned.
+        moduleRef:
+          id: resource_group
+          output: name
+      - name: resource_location
+        type: string
+        description: Geographic location of the resource (e.g. us-south, us-east)
+        scope: global
+        alias: region
+      - name: tags
+        type: list(string)
+        description: Tags that should be applied to the service
+        default: []
+      - name: plan
+        type: string
+        description: >-
+          The type of plan the service instance should run under (lite, 7-day,
+          14-day, or 30-day)
+        default: 7-day
+      - name: sync
+        type: string
+        description: Value used to order the provisioning of the instance
+        default: ''
+        moduleRef:
+          id: sync
+          output: sync
     version: v2.4.10
     outputs:
       - name: id
