Adds registryId to module metadata
closes #37

Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -1,4 +1,5 @@
 name: ibm-activity-tracker
+registryId: cloud-native-toolkit/activity-tracker/ibm
 type: terraform
 description: Provisions the IBM Cloud hosted Activity Tracker service
 interfaces:
